@@ -1,3 +1,8 @@
+2006-10-30 Sandro Santilli <strk@refractions.net>
+
+	* capi/geostest.c: added some checks of return from CAPI 
+	  functions returning GEOSGeom (not all, just a few:)
+
 2006-10-27 Markus Schaber <schabi@logix-tt.com>
 
 	* algorithm::InteriorPointLine (ctor): take Geometry by const-pointer.
